--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -85,12 +85,12 @@
   "PasscodePage": {
     "submit": "सबमिट करें",
     "submitting": "सबमिट हो रहा है",
-    "setPasscode": "पासकोड सेट करें",
-    "enterPasscode": "पासकोड दर्ज करें",
+    "setPasscode": "शुरू करने के लिए अपना पासकोड सेट करें",
+    "setPasscodeDescription": "कृपया अपने पासकोड को याद रखें या सुरक्षित रूप से संग्रहित करें। आपको हर बार वॉलेट एक्सेस करने के लिए इसकी आवश्यकता होगी।",
+    "enterPasscode": "जारी रखने के लिए अपना पासकोड दर्ज करें",
+    "enterPasscodeDescription": "अपने खाते या वॉलेट तक पहुँचने के लिए वही पासकोड उपयोग करें जो आपने पहले सेट किया था।",
     "confirmPasscode": "पासकोड की पुष्टि करें",
     "forgotPasscode": "पासकोड भूल गए",
-    "setPasscodeDescription": "शुरू करने के लिए अपना पासकोड सेट करें",
-    "enterPasscodeDescription": "अपना 6 अंकों का पासकोड दर्ज करें",
     "passcodeWarning": "भविष्य में लॉगिन के लिए पासकोड याद रखें",
     "error": {
       "walletNotFoundError": "कोई वॉलेट नहीं मिला। कृपया नया बनाएँ।",
@@ -102,22 +102,32 @@
     }
   },
   "ResetPasscodePage": {
-    "title": "अपना वॉलेट रीसेट करें",
-    "subTitle": "पहुँच पुनः प्राप्त करने और क्रेडेंशियल पुनः डाउनलोड करने के लिए वॉलेट रीसेट करें",
+    "title": "क्या आप अपना पासकोड भूल गए?",
+    "subTitle": "पहुंच पुनः प्राप्त करने और अपने कार्ड दोबारा डाउनलोड करने के लिए अपना वॉलेट रीसेट करें।",
     "resetInstruction": {
-      "question": "अपना पासकोड भूल गए?",
-      "info1": "यदि आपको अपना पासकोड याद नहीं है, तो आप नीचे दिए गए बटन पर क्लिक करके उसे रीसेट कर सकते हैं।",
+      "question": "जब आप अपना पासकोड भूल जाते हैं तो क्या होता है?",
+      "info1": {
+        "message": "आपका वॉलेट सुरक्षित रूप से <strong>{{highlighter}}</strong> किया जाएगा।",
+        "highlighter": "रीसेट"
+      },
       "info2": {
-        "message": "<strong>{{highlighter1}}:</strong> इससे आपके सभी सहेजे गए कार्ड खाते से हट जाएँगे — जैसे कि आपके <strong>{{highlighter2}}</strong>, और आपके द्वारा जोड़े गए अन्य दस्तावेज़।",
-        "highlighter1": "कृपया ध्यान",
-        "highlighter2": "राष्ट्रीय पहचान पत्र, कर पहचान पत्र, बीमा प्रमाण पत्र"
+        "message": "आपके वॉलेट से पहले से सहेजे गए सभी <strong>{{highlighter}}</strong> हट जाएंगे।",
+        "highlighter": "कार्ड हटा दिए जाएंगे"
       },
       "info3": {
-        "message": "रीसेट करने के बाद, आपको अपने वॉलेट में एक नया पासकोड और <strong>{{highlighter}}</strong> सेट करना होगा।",
-        "highlighter": "अपने कार्ड पुनः डाउनलोड करें"
+        "message": "आपको <strong>{{highlighter}}</strong> के लिए निर्देशित किया जाएगा।",
+        "highlighter": "नया पासकोड सेट करें"
+      },
+      "info4": {
+        "message": "इसके बाद आप <strong>{{highlighter}}</strong> कर सकते हैं, मूल स्रोत/जारीकर्ताओं से।",
+        "highlighter": "कार्ड दोबारा डाउनलोड करें"
+      },
+      "info5": {
+        "message": "यह आपकी जानकारी को <strong>{{highlighter}}</strong> रखता है, भले ही आपका डिवाइस/वॉलेट खो जाए या साझा हो।",
+        "highlighter": "सुरक्षित"
       }
     },
-    "forgetPasscode": "पासकोड भूल जाओ",
+    "setNewPasscode": "नया पासकोड सेट करें",
     "resetFailure": "आपका वॉलेट रीसेट करते समय कुछ गड़बड़ी हुई है। कृपया कुछ देर बाद फिर से प्रयास करें।"
   },
   "IssuersPage": {
