--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -85,12 +85,12 @@
   "PasscodePage": {
     "submit": "சமர்ப்பிக்கவும்",
     "submitting": "சமர்ப்பிக்கப்படுகின்றது",
-    "setPasscode": "பாஸ்கோடு அமைக்கவும்",
-    "enterPasscode": "பாஸ்கோடு உள்ளிடவும்",
+    "setPasscode": "தொடங்க உங்கள் பாஸ்கோடு அமைக்கவும்",
+    "setPasscodeDescription": "தயவுசெய்து உங்கள் பாஸ்கோட்டை நினைவில் வையுங்கள் அல்லது பாதுகாப்பாக சேமிக்கவும். ஒவ்வொரு முறையும் வாலட்டை அணுகும்போது இது தேவைப்படும்.",
+    "enterPasscode": "தொடர உங்கள் பாஸ்கோட்டை உள்ளிடவும்",
+    "enterPasscodeDescription": "உங்கள் கணக்கு அல்லது வாலட்டை அணுக tid முன்னதாக அமைத்த அதே பாஸ்கோட்டை பயன்படுத்தவும்.",
     "confirmPasscode": "பாஸ்கோடு உறுதிப்படுத்தவும்",
     "forgotPasscode": "கடவுக்குறியீட்டை மறந்துவிட்டேன்",
-    "setPasscodeDescription": "தொடங்க உங்கள் பாஸ்கோடு அமைக்கவும்",
-    "enterPasscodeDescription": "உங்கள் 6 இலக்க பாஸ்கோடு உள்ளிடவும்",
     "passcodeWarning": "எதிர்கால உள்நுழைவுக்கு பாஸ்கோடு நினைவில் வைக்கவும்",
     "error": {
       "walletNotFoundError": "பணப்பை காணவில்லை. தயவுசெய்து ஒன்றை உருவாக்கவும்.",
@@ -102,23 +102,33 @@
     }
   },
   "ResetPasscodePage": {
-    "title": "உங்கள் பணப்பையை மீட்டமைக்கவும்",
-    "subTitle": "அணுகலை மீண்டும் பெறவும் சான்றுகளை மீண்டும் பதிவிறக்கவும் வாலட்டை மீட்டமைக்கவும்.",
+    "title": "உங்கள் கடவுக்குறியீட்டை மறந்துவிட்டீர்களா?",
+    "subTitle": "அணுகலை மீண்டும் பெறவும் மற்றும் உங்கள் அட்டைகளை மீண்டும் பதிவிறக்கவும் உங்கள் வாலட்டை மீட்டமைக்கவும்.",
     "resetInstruction": {
-      "question": "உங்கள் கடவுக்குறியீட்டை மறந்துவிட்டீர்களா?",
-      "info1": "உங்கள் கடவுக்குறியீட்டை நினைவில் கொள்ள முடியவில்லை என்றால், கீழே உள்ள பொத்தானைக் கிளிக் செய்வதன் மூலம் அதை மீட்டமைக்கலாம்.",
+      "question": "நீங்கள் கடவுக்குறியீட்டை மறந்தால் என்ன நடக்கும்?",
+      "info1": {
+        "message": "உங்கள் வாலட் பாதுகாப்பாக <strong>{{highlighter}}</strong> செய்யப்படும்.",
+        "highlighter": "மீட்டமைக்கப்படும்"
+      },
       "info2": {
-        "message": "<strong>{{highlighter1}}:</strong> இது உங்கள் <strong>{{highlighter2}}</strong> மற்றும் நீங்கள் சேர்த்த வேறு எந்த ஆவணங்கள் போன்ற உங்கள் சேமிக்கப்பட்ட அனைத்து அட்டைகளையும் கணக்கிலிருந்து அகற்றும்.",
-        "highlighter1": "தயவுசெய்து கவனிக்கவும்",
-        "highlighter2": "தேசிய அடையாள அட்டை, வரி அடையாள அட்டை, காப்பீட்டுச் சான்றிதழ்"
+        "message": "முன்பே சேமிக்கப்பட்ட அனைத்து <strong>{{highlighter}}</strong> உங்கள் வாலட்டிலிருந்து நீக்கப்படும்.",
+        "highlighter": "அட்டைகள் நீக்கப்படும்"
       },
       "info3": {
-        "message": "மீட்டமைத்த பிறகு, உங்கள் Wallet இல் ஒரு புதிய கடவுக்குறியீட்டையும் <strong>{{highlighter}}</strong> ஐயும் அமைக்க வேண்டும்.",
-        "highlighter": "உங்கள் கார்டுகளை மீண்டும் பதிவிறக்கவும்."
+        "message": "நீங்கள் <strong>{{highlighter}}</strong> செய்ய வழிகாட்டப்படுவீர்கள்.",
+        "highlighter": "புதிய கடவுக்குறியீட்டை அமைக்க"
+      },
+      "info4": {
+        "message": "பின்னர் நீங்கள் மூல ஆதாரம்/வழங்குபவர்களிடமிருந்து <strong>{{highlighter}}</strong> செய்யலாம்.",
+        "highlighter": "அட்டைகளை மீண்டும் பதிவிறக்கவும்"
+      },
+      "info5": {
+        "message": "உங்கள் தகவல் <strong>{{highlighter}}</strong> இருக்கும், உங்கள் சாதனம்/வாலட் இழந்தாலும் அல்லது பகிர்ந்தாலும்.",
+        "highlighter": "பாதுகாப்பாக"
       }
     },
-    "forgetPasscode": "கடவுக்குறியீட்டை மறந்து விடுங்கள்",
-    "resetFailure": "உங்கள் வாலட்டை மீட்டமைக்கும்போது ஏதோ தவறு ஏற்பட்டது. சிறிது நேரத்தில் மீண்டும் முயற்சிக்கவும்."
+    "setNewPasscode": "புதிய கடவுக்குறியீட்டை அமைக்கவும்",
+    "resetFailure": "உங்கள் வாலட்டை மீட்டமைக்கும் போது ஏதோ தவறு ஏற்பட்டது. தயவுசெய்து சிறிது நேரத்தில் மீண்டும் முயற்சிக்கவும்."
   },
   "IssuersPage": {
     "Intro": {
