--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -85,12 +85,12 @@
   "PasscodePage": {
     "submit": "ಸಮರ್ಪಿಸಿ",
     "submitting": "ಸಮರ್ಪಿಸಲಾಗುತ್ತಿದೆ",
-    "setPasscode": "ಪಾಸ್‌ಕೋಡ್ ಹೊಂದಿಸಿ",
-    "enterPasscode": "ಪಾಸ್‌ಕೋಡ್ ನಮೂದಿಸಿ",
+    "setPasscode": "ಪ್ರಾರಂಭಿಸಲು ನಿಮ್ಮ ಪಾಸ್‌ಕೋಡ್ ಹೊಂದಿಸಿ",
+    "setPasscodeDescription": "ದಯವಿಟ್ಟು ನಿಮ್ಮ ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ನೆನಪಿಡಿ ಅಥವಾ ಸುರಕ್ಷಿತವಾಗಿ ಸಂಗ್ರಹಿಸಿ. ಪ್ರತಿ ಬಾರಿ ವಾಲೆಟ್ ಪ್ರವೇಶಿಸಲು ನಿಮಗೆ ಇದನ್ನು ಅಗತ್ಯವಿರುತ್ತದೆ.",
+    "enterPasscode": "ಮುಂದುವರೆಯಲು ನಿಮ್ಮ ಪಾಸ್‌ಕೋಡ್ ನಮೂದಿಸಿ",
+    "enterPasscodeDescription": "ನಿಮ್ಮ ಖಾತೆ ಅಥವಾ ವಾಲೆಟ್ ಪ್ರವೇಶಿಸಲು ನೀವು ಮೊದಲು ಹೊಂದಿಸಿದ ಅದೇ ಪಾಸ್‌ಕೋಡ್ ಬಳಸಿ.",
     "confirmPasscode": "ಪಾಸ್‌ಕೋಡ್ ದೃಢೀಕರಿಸಿ",
     "forgotPasscode": "ಪಾಸ್‌ಕೋಡ್ ಮರೆತಿದ್ದಾರೆ",
-    "setPasscodeDescription": "ಪ್ರಾರಂಭಿಸಲು ನಿಮ್ಮ ಪಾಸ್‌ಕೋಡ್ ಹೊಂದಿಸಿ",
-    "enterPasscodeDescription": "ನಿಮ್ಮ 6 ಅಂಕಗಳ ಪಾಸ್‌ಕೋಡ್ ನಮೂದಿಸಿ",
     "passcodeWarning": "ಭವಿಷ್ಯದಲ್ಲಿ ಲಾಗಿನ್ ಮಾಡಲು ಪಾಸ್‌ಕೋಡ್ ನೆನಪಿಡಿ",
     "error": {
       "walletNotFoundError": "ಪರ್ಸು ಕಂಡುಬಂದಿಲ್ಲ. ದಯವಿಟ್ಟು ಹೊಸದನ್ನು ರಚಿಸಿ.",
@@ -102,22 +102,32 @@
     }
   },
   "ResetPasscodePage": {
-    "title": "ನಿಮ್ಮ ವಾಲೆಟ್ ಅನ್ನು ಮರುಹೊಂದಿಸಿ",
-    "subTitle": "ಪ್ರವೇಶವನ್ನು ಮರಳಿ ಪಡೆಯಲು ಮತ್ತು ರುಜುವಾತುಗಳನ್ನು ಮರು-ಡೌನ್‌ಲೋಡ್ ಮಾಡಲು ವಾಲೆಟ್ ಅನ್ನು ಮರುಹೊಂದಿಸಿ.",
+    "title": "ನೀವು ಪಾಸ್‌ಕೋಡ್ ಮರೆತಿದ್ದೀರಾ?",
+    "subTitle": "ಪ್ರವೇಶವನ್ನು ಮರಳಿ ಪಡೆಯಲು ಮತ್ತು ನಿಮ್ಮ ಕಾರ್ಡ್‌ಗಳನ್ನು ಪುನಃ ಡೌನ್‌ಲೋಡ್ ಮಾಡಲು ನಿಮ್ಮ ವಾಲೆಟ್ ಅನ್ನು ಮರುಹೊಂದಿಸಿ.",
     "resetInstruction": {
-      "question": "ನಿಮ್ಮ ಪಾಸ್ಕೋಡ್ ಮರೆತಿರುವಿರಾ?",
-      "info1": "ನಿಮ್ಮ ಪಾಸ್‌ಕೋಡ್ ನೆನಪಿಲ್ಲದಿದ್ದರೆ, ಕೆಳಗಿನ ಬಟನ್ ಕ್ಲಿಕ್ ಮಾಡುವ ಮೂಲಕ ನೀವು ಅದನ್ನು ಮರುಹೊಂದಿಸಬಹುದು.",
+      "question": "ನೀವು ಪಾಸ್‌ಕೋಡ್ ಮರೆತರೆ ಏನು ಆಗುತ್ತದೆ?",
+      "info1": {
+        "message": "ನಿಮ್ಮ ವಾಲೆಟ್ ಅನ್ನು ಸುರಕ್ಷಿತವಾಗಿ <strong>{{highlighter}}</strong> ಮಾಡಲಾಗುತ್ತದೆ.",
+        "highlighter": "ಮರುಹೊಂದಿಸಲಾಗುತ್ತದೆ"
+      },
       "info2": {
-        "message": "<strong>{{highlighter1}}:</strong> ಇದು ನಿಮ್ಮ ಎಲ್ಲಾ ಉಳಿಸಿದ ಕಾರ್ಡ್‌ಗಳನ್ನು ಖಾತೆಯಿಂದ ತೆಗೆದುಹಾಕುತ್ತದೆ — ಉದಾಹರಣೆಗೆ ನಿಮ್ಮ <strong>{{highlighter2}}</strong>, ಮತ್ತು ನೀವು ಸೇರಿಸಿರುವ ಯಾವುದೇ ಇತರ ದಾಖಲೆಗಳು.",
-        "highlighter1": "ದಯವಿಟ್ಟು ಗಮನಿಸಿ",
-        "highlighter2": "ರಾಷ್ಟ್ರೀಯ ಗುರುತಿನ ಚೀಟಿ, ತೆರಿಗೆ ಗುರುತಿನ ಚೀಟಿ, ವಿಮಾ ಪ್ರಮಾಣಪತ್ರ"
+        "message": "ಹಿಂದೆ ಸಂಗ್ರಹಿಸಿದ ಎಲ್ಲಾ <strong>{{highlighter}}</strong> ನಿಮ್ಮ ವಾಲೆಟ್‌ನಿಂದ ಅಳಿಸಲಾಗುತ್ತದೆ.",
+        "highlighter": "ಕಾರ್ಡ್‌ಗಳು ಅಳಿಸಲಾಗುತ್ತದೆ"
       },
       "info3": {
-        "message": "ಮರುಹೊಂದಿಸಿದ ನಂತರ, ನೀವು ನಿಮ್ಮ ವಾಲೆಟ್‌ಗೆ ಹೊಸ ಪಾಸ್‌ಕೋಡ್ ಮತ್ತು <strong>{{ಹೈಲೈಟರ್}}</strong> ಅನ್ನು ಹೊಂದಿಸಬೇಕಾಗುತ್ತದೆ.",
-        "highlighter": "ನಿಮ್ಮ ಕಾರ್ಡ್‌ಗಳನ್ನು ಪುನಃ ಡೌನ್‌ಲೋಡ್ ಮಾಡಿ"
+        "message": "ನೀವು <strong>{{highlighter}}</strong> ಮಾಡಲು ಮಾರ್ಗದರ್ಶನ ಪಡೆಯುತ್ತೀರಿ.",
+        "highlighter": "ಹೊಸ ಪಾಸ್‌ಕೋಡ್ ಸೆಟ್ ಮಾಡಿ"
+      },
+      "info4": {
+        "message": "ನಂತರ ನೀವು ಮೂಲ ಮೂಲ/ಜಾರಿಗಾರರಿಂದ <strong>{{highlighter}}</strong> ಮಾಡಬಹುದು.",
+        "highlighter": "ಕಾರ್ಡ್‌ಗಳನ್ನು ಪುನಃ ಡೌನ್‌ಲೋಡ್ ಮಾಡಿ"
+      },
+      "info5": {
+        "message": "ನಿಮ್ಮ ಮಾಹಿತಿ <strong>{{highlighter}}</strong> ಇರುತ್ತದೆ, ನಿಮ್ಮ ಸಾಧನ/ವಾಲೆಟ್ ಕಳೆದುಹೋಗಿದ್ದರೂ ಅಥವಾ ಹಂಚಿಕೊಂಡಿದ್ದರೂ.",
+        "highlighter": "ಸುರಕ್ಷಿತ"
       }
     },
-    "forgetPasscode": "ಪಾಸ್‌ಕೋಡ್ ಮರೆತುಬಿಡಿ",
+    "setNewPasscode": "ಹೊಸ ಪಾಸ್‌ಕೋಡ್ ಸೆಟ್ ಮಾಡಿ",
     "resetFailure": "ನಿಮ್ಮ ವಾಲೆಟ್ ಅನ್ನು ಮರುಹೊಂದಿಸುವಾಗ ಏನೋ ತಪ್ಪಾಗಿದೆ. ದಯವಿಟ್ಟು ಸ್ವಲ್ಪ ಸಮಯದ ನಂತರ ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ."
   },
   "IssuersPage": {
