--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -89,7 +89,8 @@
     "setPasscodeDescription": "कृपया अपने पासकोड को याद रखें या सुरक्षित रूप से संग्रहित करें। आपको हर बार वॉलेट एक्सेस करने के लिए इसकी आवश्यकता होगी।",
     "enterPasscode": "जारी रखने के लिए अपना पासकोड दर्ज करें",
     "enterPasscodeDescription": "अपने खाते या वॉलेट तक पहुँचने के लिए वही पासकोड उपयोग करें जो आपने पहले सेट किया था।",
-    "confirmPasscode": "पासकोड की पुष्टि करें",
+    "enterPasscodeLabel": "पासकोड दर्ज करें",
+    "confirmPasscodeLabel": "पासकोड की पुष्टि करें",
     "forgotPasscode": "पासकोड भूल गए",
     "passcodeWarning": "भविष्य में लॉगिन के लिए पासकोड याद रखें",
     "error": {
