--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -89,7 +89,8 @@
     "setPasscodeDescription": "ದಯವಿಟ್ಟು ನಿಮ್ಮ ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ನೆನಪಿಡಿ ಅಥವಾ ಸುರಕ್ಷಿತವಾಗಿ ಸಂಗ್ರಹಿಸಿ. ಪ್ರತಿ ಬಾರಿ ವಾಲೆಟ್ ಪ್ರವೇಶಿಸಲು ನಿಮಗೆ ಇದನ್ನು ಅಗತ್ಯವಿರುತ್ತದೆ.",
     "enterPasscode": "ಮುಂದುವರೆಯಲು ನಿಮ್ಮ ಪಾಸ್‌ಕೋಡ್ ನಮೂದಿಸಿ",
     "enterPasscodeDescription": "ನಿಮ್ಮ ಖಾತೆ ಅಥವಾ ವಾಲೆಟ್ ಪ್ರವೇಶಿಸಲು ನೀವು ಮೊದಲು ಹೊಂದಿಸಿದ ಅದೇ ಪಾಸ್‌ಕೋಡ್ ಬಳಸಿ.",
-    "confirmPasscode": "ಪಾಸ್‌ಕೋಡ್ ದೃಢೀಕರಿಸಿ",
+    "enterPasscodeLabel": "ಪಾಸ್‌ಕೋಡ್ ನಮೂದಿಸಿ",
+    "confirmPasscodeLabel": "ಪಾಸ್‌ಕೋಡ್ ದೃಢೀಕರಿಸಿ",
     "forgotPasscode": "ಪಾಸ್‌ಕೋಡ್ ಮರೆತಿದ್ದಾರೆ",
     "passcodeWarning": "ಭವಿಷ್ಯದಲ್ಲಿ ಲಾಗಿನ್ ಮಾಡಲು ಪಾಸ್‌ಕೋಡ್ ನೆನಪಿಡಿ",
     "error": {
