--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -89,7 +89,8 @@
     "setPasscodeDescription": "தயவுசெய்து உங்கள் பாஸ்கோட்டை நினைவில் வையுங்கள் அல்லது பாதுகாப்பாக சேமிக்கவும். ஒவ்வொரு முறையும் வாலட்டை அணுகும்போது இது தேவைப்படும்.",
     "enterPasscode": "தொடர உங்கள் பாஸ்கோட்டை உள்ளிடவும்",
     "enterPasscodeDescription": "உங்கள் கணக்கு அல்லது வாலட்டை அணுக tid முன்னதாக அமைத்த அதே பாஸ்கோட்டை பயன்படுத்தவும்.",
-    "confirmPasscode": "பாஸ்கோடு உறுதிப்படுத்தவும்",
+    "enterPasscodeLabel": "பாஸ்கோடு உள்ளிடவும்",
+    "confirmPasscodeLabel": "பாஸ்கோடு உறுதிப்படுத்தவும்",
     "forgotPasscode": "கடவுக்குறியீட்டை மறந்துவிட்டேன்",
     "passcodeWarning": "எதிர்கால உள்நுழைவுக்கு பாஸ்கோடு நினைவில் வைக்கவும்",
     "error": {
