[INJIWEB-1615] add - get profile info from api on Profile page
Signed-off-by: KiruthikaJeyashankar <kiruthikavjshankar@gmail.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -399,7 +399,11 @@
       "title": "ملفي الشخصي",
       "homeTitle": "الصفحة الرئيسية",
       "fullName": "الاسم الكامل",
-      "emailAddress": "عنوان البريد الإلكتروني"
+      "emailAddress": "عنوان البريد الإلكتروني",
+      "error": {
+        "title": "الملف الشخصي غير متاح",
+        "message": "لم نتمكن من تحميل تفاصيل ملفك الشخصي بسبب مشكلة تقنية. يرجى المحاولة مرة أخرى لاحقاً."
+      }
     }
   },
   "StoredCards": {
