--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -399,7 +399,11 @@
       "title": "मेरा प्रोफ़ाइल",
       "homeTitle": "मुखपृष्ठ",
       "fullName": "पूरा नाम",
-      "emailAddress": "ईमेल पता"
+      "emailAddress": "ईमेल पता",
+      "error": {
+        "title": "प्रोफ़ाइल उपलब्ध नहीं है",
+        "message": "हम तकनीकी समस्या के कारण आपके प्रोफ़ाइल विवरण लोड नहीं कर सके। कृपया बाद में पुनः प्रयास करें।"
+      }
     }
   },
   "StoredCards": {
