--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -400,7 +400,11 @@
       "title": "ನನ್ನ ಪ್ರೊಫೈಲ್",
       "homeTitle": "ಮುಖಪುಟ",
       "fullName": "ಪೂರ್ಣ ಹೆಸರು",
-      "emailAddress": "ಇಮೇಲ್ ವಿಳಾಸ"
+      "emailAddress": "ಇಮೇಲ್ ವಿಳಾಸ",
+      "error": {
+        "title": "ಪ್ರೊಫೈಲ್ ಲಭ್ಯವಿಲ್ಲ",
+        "message": "ತಾಂತ್ರಿಕ ಸಮಸ್ಯೆಯಿಂದಾಗಿ ನಿಮ್ಮ ಪ್ರೊಫೈಲ್ ವಿವರಗಳನ್ನು ಲೋಡ್ ಮಾಡಲು ನಮಗೆ ಸಾಧ್ಯವಾಗಲಿಲ್ಲ. ದಯವಿಟ್ಟು ನಂತರ ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ."
+      }
     }
   },
   "StoredCards": {
