--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -399,7 +399,11 @@
       "title": "என் சுயவிவரம்",
       "homeTitle": "முகப்பு",
       "fullName": "முழு பெயர்",
-      "emailAddress": "மின்னஞ்சல் முகவரி"
+      "emailAddress": "மின்னஞ்சல் முகவரி",
+      "error": {
+        "title": "சுயவிவரம் கிடைக்கவில்லை",
+        "message": "தொழில்நுட்ப சிக்கல் காரணமாக உங்கள் சுயவிவர விவரங்களை ஏற்ற முடியவில்லை. பிறகு மீண்டும் முயற்சிக்கவும்."
+      }
     }
   },
   "StoredCards": {
