[INJIWEB-1627] add logic to show the approriate error messages for wallet temporary lock, permanent lock, last attempt and incorrect passcode and add the translations for the same
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -98,8 +98,13 @@
       "passcodeLengthError": "يجب أن يكون الرقم السري 6 أرقام.",
       "passcodeMismatchError": "رمزا المرور غير متطابقين. يُرجى التأكد من تطابق حقلي رمز المرور تمامًا. أعد إدخالهما وحاول مجددًا.",
       "createWalletError": "فشل إنشاء المحفظة.",
-      "incorrectPasscodeError": "رمز المرور غير صالح. رمز المرور الذي أدخلته غير صحيح. يُرجى التحقق والمحاولة مرة أخرى، أو انقر على \"نسيت رمز المرور\" لإعادة تعيينه.",
-      "fetchWalletsError": "فشل في جلب المحافظ."
+      "incorrectPasscodeError": "يبدو أن رمز المرور غير صحيح. يُرجى المحاولة مرة أخرى، أو انقر على \"نسيت رمز المرور\" إذا كنت بحاجة إلى مساعدة في إعادة ضبطه.",
+      "fetchWalletsError": "فشل في جلب المحافظ.",
+      "status": {
+        "wallet_temporarily_locked": "لقد وصلتَ إلى الحد الأقصى لعدد المحاولات. محفظتك الآن مقفلة مؤقتًا لبعض الوقت.",
+        "wallet_permanently_locked": "تم قفل محفظتك نهائيًا بسبب عدة محاولات فاشلة. يُرجى النقر على \"نسيت كلمة المرور\" لإعادة ضبط محفظتك والمتابعة.",
+        "one_attempt_left_before_permanent_lock": "رمز المرور غير صحيح. آخر محاولة متبقية قبل قفل محفظتك نهائيًا."
+      }
     }
   },
   "ResetPasscodePage": {
