--- a/inji-web/src/locales/fr.json
+++ b/inji-web/src/locales/fr.json
@@ -98,8 +98,13 @@
       "passcodeLengthError": "Le code PIN doit comporter 6 chiffres.",
       "passcodeMismatchError": "Les codes d'accès ne correspondent pas. Veuillez vous assurer que les deux champs du code correspondent parfaitement. Saisissez-le à nouveau et réessayez.",
       "createWalletError": "Échec de la création du portefeuille.",
-      "incorrectPasscodeError": "Code d'accès invalide. Le code d'accès saisi est incorrect. Veuillez vérifier et réessayer, ou cliquez sur « Mot de passe oublié » pour le réinitialiser.",
-      "fetchWalletsError": "Échec du chargement des portefeuilles."
+      "incorrectPasscodeError": "Ce code d'accès ne semble pas correct. Veuillez réessayer ou appuyer sur « Mot de passe oublié » si vous avez besoin d'aide pour le réinitialiser.",
+      "fetchWalletsError": "Échec du chargement des portefeuilles.",
+      "status": {
+        "wallet_temporarily_locked": "Vous avez atteint le nombre maximal de tentatives. Votre portefeuille est temporairement bloqué.",
+        "wallet_permanently_locked": "Votre portefeuille a été définitivement verrouillé suite à plusieurs tentatives infructueuses. Veuillez cliquer sur « Mot de passe oublié » pour réinitialiser votre portefeuille et continuer.",
+        "one_attempt_left_before_permanent_lock": "Code d'accès incorrect. Dernière tentative avant le blocage définitif de votre portefeuille."
+      }
     }
   },
   "ResetPasscodePage": {
