--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -98,8 +98,13 @@
       "passcodeLengthError": "ಪಿನ್ 6 ಸಂಖ್ಯೆಗಳಾಗಿರಬೇಕು.",
       "passcodeMismatchError": "ಪಾಸ್‌ಕೋಡ್‌ಗಳು ಹೊಂದಿಕೆಯಾಗುತ್ತಿಲ್ಲ. ಎರಡೂ ಪಾಸ್‌ಕೋಡ್ ಕ್ಷೇತ್ರಗಳು ನಿಖರವಾಗಿ ಹೊಂದಿಕೆಯಾಗುವುದನ್ನು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ. ಮರು-ನಮೂದಿಸಿ ಮತ್ತು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
       "createWalletError": "ಪರ್ಸು ರಚನೆ ವಿಫಲವಾಗಿದೆ.",
-      "incorrectPasscodeError": "ಅಮಾನ್ಯ ಪಾಸ್‌ಕೋಡ್. ನೀವು ನಮೂದಿಸಿದ ಪಾಸ್‌ಕೋಡ್ ತಪ್ಪಾಗಿದೆ. ದಯವಿಟ್ಟು ಪರಿಶೀಲಿಸಿ ಮತ್ತು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ, ಅಥವಾ ಅದನ್ನು ಮರುಹೊಂದಿಸಲು 'ಪಾಸ್‌ಕೋಡ್ ಮರೆತಿರಾ' ಕ್ಲಿಕ್ ಮಾಡಿ.",
-      "fetchWalletsError": "ಪರ್ಸುಗಳನ್ನು ಪಡೆಯಲು ವಿಫಲವಾಗಿದೆ."
+      "incorrectPasscodeError": "ಆ ಪಾಸ್‌ಕೋಡ್ ಸರಿಯಾಗಿಲ್ಲ ಎಂದು ತೋರುತ್ತದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ, ಅಥವಾ ಅದನ್ನು ಮರುಹೊಂದಿಸಲು ನಿಮಗೆ ಸಹಾಯ ಬೇಕಾದರೆ 'ಪಾಸ್‌ಕೋಡ್ ಮರೆತಿದ್ದೀರಾ' ಟ್ಯಾಪ್ ಮಾಡಿ.",
+      "fetchWalletsError": "ಪರ್ಸುಗಳನ್ನು ಪಡೆಯಲು ವಿಫಲವಾಗಿದೆ.",
+      "status": {
+        "wallet_temporarily_locked": "ನೀವು ಗರಿಷ್ಠ ಸಂಖ್ಯೆಯ ಪ್ರಯತ್ನಗಳನ್ನು ತಲುಪಿದ್ದೀರಿ. ನಿಮ್ಮ ವ್ಯಾಲೆಟ್ ಈಗ ತಾತ್ಕಾಲಿಕವಾಗಿ ಸ್ವಲ್ಪ ಸಮಯದವರೆಗೆ ಲಾಕ್ ಆಗಿದೆ.",
+        "wallet_permanently_locked": "ಹಲವಾರು ವಿಫಲ ಪ್ರಯತ್ನಗಳಿಂದಾಗಿ ನಿಮ್ಮ ವ್ಯಾಲೆಟ್ ಶಾಶ್ವತವಾಗಿ ಲಾಕ್ ಆಗಿದೆ. ಮುಂದುವರಿಯಲು ನಿಮ್ಮ ವ್ಯಾಲೆಟ್ ಅನ್ನು ಮರುಹೊಂದಿಸಲು ದಯವಿಟ್ಟು ಮರೆತುಹೋದ ಪಾಸ್‌ವರ್ಡ್ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ.",
+        "one_attempt_left_before_permanent_lock": "ತಪ್ಪಾದ ಪಾಸ್‌ಕೋಡ್. ನಿಮ್ಮ ವ್ಯಾಲೆಟ್ ಶಾಶ್ವತವಾಗಿ ಲಾಕ್ ಆಗುವ ಮೊದಲು ಕೊನೆಯ ಪ್ರಯತ್ನ ಉಳಿದಿದೆ."
+      }
     }
   },
   "ResetPasscodePage": {
