--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -98,8 +98,13 @@
       "passcodeLengthError": "पिन 6 अंकों का होना चाहिए।",
       "passcodeMismatchError": "पासकोड मेल नहीं खाते। कृपया सुनिश्चित करें कि दोनों पासकोड फ़ील्ड बिल्कुल मेल खाते हैं। पुनः दर्ज करें और पुनः प्रयास करें।",
       "createWalletError": "वॉलेट निर्माण असफल हुआ।",
-      "incorrectPasscodeError": "अमान्य पासकोड। आपके द्वारा दर्ज किया गया पासकोड गलत है। कृपया जाँचें और पुनः प्रयास करें, या इसे रीसेट करने के लिए 'पासकोड भूल गए' पर क्लिक करें।",
-      "fetchWalletsError": "वॉलेट लाने में त्रुटि।"
+      "incorrectPasscodeError": "वह पासकोड सही नहीं लग रहा है। कृपया पुनः प्रयास करें, या यदि आपको इसे रीसेट करने में सहायता चाहिए तो 'पासकोड भूल गए' पर टैप करें",
+      "fetchWalletsError": "वॉलेट लाने में त्रुटि।",
+      "status": {
+        "wallet_temporarily_locked": "आप अधिकतम प्रयासों की संख्या तक पहुँच चुके हैं। आपका वॉलेट अब कुछ समय के लिए अस्थायी रूप से लॉक कर दिया गया है",
+        "wallet_permanently_locked": "कई असफल प्रयासों के कारण आपका वॉलेट स्थायी रूप से लॉक हो गया है। कृपया जारी रखने के लिए अपना वॉलेट रीसेट करने के लिए पासवर्ड भूल गए पर क्लिक करें",
+        "one_attempt_left_before_permanent_lock": "गलत पासकोड। आपका वॉलेट स्थायी रूप से लॉक होने से पहले बचा हुआ अंतिम प्रयास"
+      }
     }
   },
   "ResetPasscodePage": {
