--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -98,8 +98,13 @@
       "passcodeLengthError": "பின் 6 இலக்கமாக இருக்க வேண்டும்.",
       "passcodeMismatchError": "கடவுக்குறியீடுகள் பொருந்தவில்லை. இரண்டு கடவுக்குறியீடு புலங்களும் சரியாகப் பொருந்துவதை உறுதிசெய்து கொள்ளவும். மீண்டும் உள்ளிட்டு மீண்டும் முயற்சிக்கவும்.",
       "createWalletError": "பணப்பை உருவாக்கம் தோல்வியடைந்தது.",
-      "incorrectPasscodeError": "தவறான கடவுக்குறியீடு. நீங்கள் உள்ளிட்ட கடவுக்குறியீடு தவறானது. சரிபார்த்து மீண்டும் முயற்சிக்கவும், அல்லது அதை மீட்டமைக்க 'கடவுக்குறியீட்டை மறந்துவிட்டீர்களா' என்பதைக் கிளிக் செய்யவும்.",
-      "fetchWalletsError": "பணப்பைகளை மீட்கத் தவறியது."
+      "incorrectPasscodeError": "அந்தக் கடவுக்குறியீடு சரியாகத் தெரியவில்லை. மீண்டும் முயற்சிக்கவும், அல்லது அதை மீட்டமைக்க உதவி தேவைப்பட்டால் ‘கடவுக்குறியீட்டை மறந்துவிட்டேன்’ என்பதைத் தட்டவும்.",
+      "fetchWalletsError": "பணப்பைகளை மீட்கத் தவறியது.",
+      "status": {
+        "wallet_temporarily_locked": "நீங்கள் அதிகபட்ச முயற்சிகளை அடைந்துவிட்டீர்கள். உங்கள் பணப்பை இப்போது சிறிது நேரம் தற்காலிகமாக பூட்டப்பட்டுள்ளது.",
+        "wallet_permanently_locked": "பலமுறை முயற்சித்து தோல்வியடைந்ததால், உங்கள் வாலட் நிரந்தரமாக பூட்டப்பட்டுள்ளது. தொடர, உங்கள் வாலட்டை மீட்டமைக்க மறந்துவிட்ட கடவுச்சொல்லைக் கிளிக் செய்யவும்.",
+        "one_attempt_left_before_permanent_lock": "தவறான கடவுக்குறியீடு. உங்கள் பணப்பை நிரந்தரமாகப் பூட்டப்படுவதற்கு முன் கடைசி முயற்சி மீதமுள்ளது."
+      }
     }
   },
   "ResetPasscodePage": {
