--- a/inji-web/src/locales/fr.json
+++ b/inji-web/src/locales/fr.json
@@ -100,9 +100,9 @@
       "createWalletError": "Échec de la création du portefeuille.",
       "incorrectPasscodeError": "Ce code d'accès ne semble pas correct. Veuillez réessayer ou appuyer sur « Mot de passe oublié » si vous avez besoin d'aide pour le réinitialiser.",
       "fetchWalletsError": "Échec du chargement des portefeuilles.",
-      "status": {
-        "wallet_temporarily_locked": "Vous avez atteint le nombre maximal de tentatives. Votre portefeuille est temporairement bloqué.",
-        "wallet_permanently_locked": "Votre portefeuille a été définitivement verrouillé suite à plusieurs tentatives infructueuses. Veuillez cliquer sur « Mot de passe oublié » pour réinitialiser votre portefeuille et continuer.",
+      "walletStatus": {
+        "temporarily_locked": "Vous avez atteint le nombre maximal de tentatives. Votre portefeuille est temporairement bloqué.",
+        "permanently_locked": "Votre portefeuille a été définitivement bloqué suite à plusieurs tentatives infructueuses. Cliquez sur « Mot de passe oublié » pour réinitialiser votre portefeuille et continuer.",
         "last_attempt_before_lockout": "Code d'accès incorrect. Dernière tentative avant le blocage définitif de votre portefeuille."
       }
     }
