--- a/inji-web/src/locales/pt.json
+++ b/inji-web/src/locales/pt.json
@@ -100,9 +100,9 @@
       "createWalletError": "Falha na criação da carteira.",
       "incorrectPasscodeError": "Essa senha não parece correta. Tente novamente ou toque em \"Esqueci a senha\" se precisar de ajuda para redefini-la.",
       "fetchWalletsError": "Erro ao buscar carteiras.",
-      "status": {
-        "wallet_temporarily_locked": "Você atingiu o número máximo de tentativas. Sua carteira está temporariamente bloqueada por algum tempo.",
-        "wallet_permanently_locked": "Sua carteira foi bloqueada permanentemente devido a várias tentativas frustradas. Clique em \"Esqueceu a senha?\" para redefinir sua carteira e continuar.",
+      "walletStatus": {
+        "temporarily_locked": "Você atingiu o número máximo de tentativas. Sua carteira está temporariamente bloqueada por algum tempo.",
+        "permanently_locked": "Sua carteira foi bloqueada permanentemente devido a várias tentativas frustradas. Clique em \"Esqueceu a senha?\" para redefinir sua carteira e continuar.",
         "last_attempt_before_lockout": "Senha incorreta. Última tentativa restante antes que sua carteira seja bloqueada permanentemente."
       }
     }
